--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "jison": "~0.4.13",
     "grunt-cli": "~0.1.13",
     "gluejs": "~2.3.2",
-    "grunt-contrib-jade": "~0.10.0"
+    "grunt-contrib-jade": "~0.10.0",
+    "browserify": "~3.31.2",
+    "grunt-browserify": "~1.3.1",
+    "grunt-contrib-stylus": "~0.13.2"
   }
 }
