--- a/package.json
+++ b/package.json
@@ -13,19 +13,18 @@
     "watch": "grunt watch --verbose"
   },
   "devDependencies": {
-    "grunt-shell": "~0.6.4",
-    "grunt-livescript": "*",
-    "grunt-contrib-uglify": "~0.3.2",
-    "grunt-contrib-watch": "*",
-    "grunt-yaml": "*",
     "jison": "~0.4.13",
-    "grunt-cli": "~0.1.13",
-    "gluejs": "~2.3.2",
-    "grunt-contrib-jade": "~0.10.0",
     "browserify": "~3.31.2",
-    "grunt-browserify": "~1.3.2",
-    "grunt-contrib-stylus": "~0.13.2",
-    "grunt-newer": "~0.7.0",
-    "grunt-ts": "~1.9.0"
+    "should": "~3.3.1",
+    "gulp-jade": "~0.5.0",
+    "gulp-livescript": "~0.2.1",
+    "gulp-livereload": "~1.3.1",
+    "gulp-mocha": "https://github.com/helderroem/gulp-mocha/archive/master.tar.gz",
+    "gulp": "~3.6.1",
+    "gulp-util": "~2.2.14",
+    "gulp-tsc": "~0.7.0",
+    "gulp-stylus": "~0.2.1",
+    "watchify": "~0.7.2",
+    "vinyl-source-stream": "~0.1.1"
   }
 }
