--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "watchify": "~0.7.2",
     "vinyl-source-stream": "~0.1.1",
     "gulp-newer": "~0.3.0",
-    "run-sequence": "~0.3.6"
+    "run-sequence": "~0.3.6",
+    "tiny-lr": "0.0.5"
   }
 }
