added wc command, more tests, better travis console result

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "watch": "gulp",
-    "test": "gulp mocha"
+    "test": "mocha test/test.js"
   },
   "devDependencies": {
     "jison": "~0.4.13",
