--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vinyl-source-stream": "~0.1.1",
     "gulp-newer": "~0.3.0",
     "run-sequence": "~0.3.6",
-    "tiny-lr": "0.0.5"
+    "tiny-lr": "0.0.5",
+    "mocha": "~1.18.2"
   }
 }
