--- a/package.json
+++ b/package.json
@@ -16,11 +16,9 @@
   "devDependencies": {
     "jison": "~0.4.13",
     "browserify": "~3.31.2",
-    "should": "~3.3.1",
     "gulp-jade": "~0.5.0",
     "gulp-livescript": "~0.2.1",
     "gulp-livereload": "~1.3.1",
-    "gulp-mocha": "https://github.com/helderroem/gulp-mocha/archive/master.tar.gz",
     "gulp": "~3.6.1",
     "gulp-util": "~2.2.14",
     "gulp-tsc": "~0.7.0",
@@ -30,6 +28,9 @@
     "gulp-newer": "~0.3.0",
     "run-sequence": "~0.3.6",
     "tiny-lr": "0.0.5",
-    "mocha": "~1.18.2"
+    "mocha": "~1.18.2",
+    "gulp-coverage": "~0.1.20",
+    "should": "~3.3.1",
+    "gulp-mocha": "~0.4.1"
   }
 }
