--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "scripts": {
     "start": "node app.js",
     "debug": "node debug app.js",
-    "test": "gulp mocha"
+    "test": "gulp coverage"
   },
   "main": "app.js",
   "repository": {
