--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "private": true,
   "version": "0.4.0",
   "description": "A Visual data-flow programming web application to create UNIX Shell workflows",
-  "keywords": ["Unix Shell"],
+  "keywords": [
+    "Unix Shell"
+  ],
   "dependencies": {
     "sails": "~0.10.0-rc5",
     "sails-disk": "~0.10.0",
@@ -49,6 +51,12 @@
     "gulp-jison": "~1.0.0",
     "gulp": "~3.6.2",
     "gulp-tsc": "~0.7.0",
-    "gulp-istanbul": "~0.1.1"
+    "gulp-istanbul": "~0.1.1",
+    "karma-chrome-launcher": "~0.1.3",
+    "karma-firefox-launcher": "~0.1.3",
+    "karma-jasmine": "~0.1.5",
+    "karma": "~0.12.16",
+    "karma-mocha": "~0.1.3",
+    "karma-ng-scenario": "~0.1.0"
   }
 }
