fix last commit test failures, change should.js to chai

--- a/package.json
+++ b/package.json
@@ -41,22 +41,24 @@
   "author": "Omar Castro",
   "license": "",
   "devDependencies": {
-    "should": "~3.3.1",
-    "supertest": "~0.12.1",
-    "mocha": "~1.18.2",
-    "run-sequence": "~0.3.6",
-    "gulp-newer": "~0.3.0",
-    "gulp-mocha": "~0.4.1",
-    "gulp-util": "~2.2.14",
-    "gulp-jison": "~1.0.0",
+    "chai": "^1.9.1",
+    "chai-as-promised": "^4.1.1",
+    "chai-properties": "^1.1.0",
     "gulp": "~3.6.2",
-    "gulp-tsc": "~0.7.0",
     "gulp-istanbul": "~0.1.1",
+    "gulp-jison": "~1.0.0",
+    "gulp-mocha": "~0.4.1",
+    "gulp-newer": "~0.3.0",
+    "gulp-tsc": "~0.7.0",
+    "gulp-util": "~2.2.14",
+    "karma": "~0.12.16",
     "karma-chrome-launcher": "~0.1.3",
     "karma-firefox-launcher": "~0.1.3",
     "karma-jasmine": "~0.1.5",
-    "karma": "~0.12.16",
     "karma-mocha": "~0.1.3",
-    "karma-ng-scenario": "~0.1.0"
+    "karma-ng-scenario": "~0.1.0",
+    "mocha": "~1.18.2",
+    "run-sequence": "~0.3.6",
+    "supertest": "~0.12.1"
   }
 }
