--- a/package.json
+++ b/package.json
@@ -7,26 +7,27 @@
     "Unix Shell"
   ],
   "dependencies": {
-    "sails": "~0.10.0-rc5",
-    "sails-disk": "~0.10.0",
-    "rc": "~0.3.3",
-    "include-all": "~0.1.3",
+    "bcrypt": "~0.7.7",
     "ejs": "~0.8.4",
     "grunt": "0.4.2",
-    "grunt-sync": "~0.0.4",
-    "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-sails-linker": "~0.9.5",
-    "grunt-contrib-jst": "~0.6.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-uglify": "~0.4.0",
-    "grunt-contrib-cssmin": "~0.9.0",
-    "grunt-contrib-less": "~0.10.0",
     "grunt-contrib-coffee": "~0.10.1",
-    "sails-memory": "~0.10.0-rc2",
-    "bcrypt": "~0.7.7",
-    "jade": "~1.3.1"
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-cssmin": "~0.9.0",
+    "grunt-contrib-jst": "~0.6.0",
+    "grunt-contrib-less": "~0.10.0",
+    "grunt-contrib-uglify": "~0.4.0",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-sails-linker": "~0.9.5",
+    "grunt-sync": "~0.0.4",
+    "include-all": "~0.1.3",
+    "jade": "~1.3.1",
+    "lodash": "^2.4.1",
+    "rc": "~0.3.3",
+    "sails": "~0.10.0-rc5",
+    "sails-disk": "~0.10.0",
+    "sails-memory": "~0.10.0-rc2"
   },
   "scripts": {
     "start": "node app.js",
@@ -61,6 +62,7 @@
     "mocha": "~1.18.2",
     "protractor": "^0.22.0",
     "run-sequence": "~0.3.6",
-    "supertest": "~0.12.1"
+    "supertest": "~0.12.1",
+    "webdriverjs": "^1.6.1"
   }
 }
