--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "rc": "~0.3.3",
     "sails": "~0.10.0-rc5",
     "sails-disk": "~0.10.0",
-    "sails-memory": "~0.10.0-rc2"
+    "sails-memory": "~0.10.0-rc2",
+    "sails-mysql": "^0.10.0-rc6"
   },
   "scripts": {
     "start": "node app.js",
@@ -63,6 +64,7 @@
     "protractor": "^0.22.0",
     "run-sequence": "~0.3.6",
     "supertest": "~0.12.1",
-    "webdriverjs": "^1.6.1"
+    "webdriverjs": "^1.6.1",
+    "sails-mysql": "^0.10.0-rc6"
   }
 }
