--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "angular-ui": "~0.4.0",
     "angular-sails": "~1.0.4",
     "ng-file-upload": "~1.4.0",
-    "ng-file-upload-shim": "~1.4.0"
+    "ng-file-upload-shim": "~1.4.0",
+    "dropzone": "~3.10.0"
   }
 }
