--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "bcrypt": "~0.7.7",
     "ejs": "~0.8.4",
+    "fs.extra": "^1.2.1",
     "grunt": "0.4.2",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-coffee": "~0.10.1",
@@ -25,11 +26,13 @@
     "jade": "~1.3.1",
     "lodash": "^2.4.1",
     "rc": "~0.3.3",
+    "rimraf": "^2.2.8",
     "sails": "~0.10.0-rc5",
     "sails-disk": "~0.10.0",
     "sails-memory": "~0.10.0-rc2",
     "sails-mysql": "^0.10.0-rc6",
-    "shelljs": "^0.3.0"
+    "shelljs": "^0.3.0",
+    "ssh-keygen": "^0.2.1"
   },
   "scripts": {
     "start": "node app.js",
