--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "include-all": "~0.1.3",
     "jade": "~1.3.1",
     "lodash": "^2.4.1",
+    "passport": "^0.2.0",
+    "passport-local": "^1.0.0",
     "rc": "~0.3.3",
     "rimraf": "^2.2.8",
     "sails": "~0.10.0-rc5",
@@ -58,14 +60,7 @@
     "gulp-protractor": "0.0.7",
     "gulp-tsc": "~0.7.0",
     "gulp-util": "~2.2.14",
-    "karma": "~0.12.16",
-    "karma-chrome-launcher": "~0.1.3",
-    "karma-firefox-launcher": "~0.1.3",
-    "karma-jasmine": "~0.1.5",
-    "karma-mocha": "~0.1.3",
-    "karma-ng-scenario": "~0.1.0",
     "mocha": "~1.18.2",
-    "protractor": "^0.22.0",
     "run-sequence": "~0.3.6",
     "supertest": "~0.12.1",
     "webdriverjs": "^1.6.1",
