--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,6 @@ install:
   - echo exit 101 | sudo tee /usr/sbin/policy-rc.d
   - sudo chmod +x /usr/sbin/policy-rc.d
   - sudo apt-get install -qy slirp lxc lxc-docker
+  - git clone git://github.com/jpetazzo/sekexe
 script:
-  - sudo docker -d & sleep 1
-  - npm install
-  - npm test && npm run badge
+  - sekexe/run "`pwd`/dockerCItesting.sh"
