--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "sails-memory": "~0.10.0-rc2",
     "sails-mysql": "^0.10.0-rc6",
     "shelljs": "^0.3.0",
-    "ssh-keygen": "^0.2.1"
+    "ssh-keygen": "^0.2.1",
+    "tsort": "0.0.1"
   },
   "scripts": {
     "start": "node app.js",
