--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,9 @@
     "ng-file-upload": "~1.4.0",
     "ng-file-upload-shim": "~1.4.0",
     "dropzone": "~3.10.0",
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "angular-animate": "~1.2.16",
+    "angular": "~1.2.16",
+    "angular-bootstrap": "~0.11.0"
   }
 }
