--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
-    "jade": "~1.3.1",
     "lodash": "^2.4.1",
     "passport": "^0.2.0",
     "passport-local": "^1.0.0",
@@ -37,7 +36,7 @@
     "ssh-keygen": "^0.2.1",
     "tsort": "0.0.1",
     "coverage-percentage": "0.0.2",
-    "coverage-badge": "0.0.5"
+    "coverage-badge": "git://github.com/ashaffer/node-coverage-badge#patch-1"
   },
   "scripts": {
     "start": "node app.js",
@@ -68,6 +67,5 @@
     "run-sequence": "~0.3.6",
     "supertest": "~0.12.1",
     "webdriverjs": "^1.6.1",
-    "sails-mysql": "^0.10.0-rc6"
   }
 }
