--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "coverage-percentage": "0.0.2",
     "ejs": "~0.8.4",
     "fs.extra": "^1.2.1",
-    "grunt": "0.4.2",
+    "grunt": "^0.4.5",
     "grunt-autoprefixer": "^0.7.3",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-coffee": "~0.10.1",
