--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "chai-as-promised": "^4.1.1",
     "chai-properties": "^1.1.0",
     "gulp": "~3.6.2",
-    "gulp-istanbul": "~0.1.1",
+    "gulp-istanbul": "^0.2.0",
     "gulp-jison": "~1.0.0",
     "gulp-mocha": "~0.4.1",
     "gulp-newer": "~0.3.0",
