--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "angular-animate": "~1.2.16",
     "angular": "~1.2.16",
     "angular-bootstrap": "~0.11.0",
-    "mousetrap": "~1.4.6"
+    "mousetrap": "~1.4.6",
+    "bowser": "~0.7.1"
   }
 }
