--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "grunt-contrib-jst": "~0.6.0",
     "grunt-contrib-less": "~0.10.0",
     "grunt-contrib-uglify": "~0.4.0",
-    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-watch": "^0.5.3",
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
@@ -65,7 +65,7 @@
     "gulp-util": "~2.2.14",
     "mocha": "~1.18.2",
     "run-sequence": "~0.3.6",
-    "supertest": "~0.12.1",
+    "supertest": "^0.13.0",
     "webdriverjs": "^1.6.1"
   }
 }
