--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "angular": "~1.2.16",
     "angular-bootstrap": "~0.11.0",
     "mousetrap": "~1.4.6",
-    "bowser": "~0.7.1"
+    "bowser": "~0.7.1",
+    "lazy.js": "~0.3.2"
   }
 }
