--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "passport-local": "^1.0.0",
     "rc": "~0.3.3",
     "rimraf": "^2.2.8",
-    "sails": "~0.10.0-rc5",
-    "sails-disk": "~0.10.0",
-    "sails-memory": "~0.10.0-rc2",
-    "sails-mysql": "^0.10.0-rc6",
+    "sails": "~0.11.0",
+    "sails-disk": "0.10.10",
+    "sails-memory": "0.10.7",
+    "sails-mysql": "^0.11.0",
     "shelljs": "^0.3.0",
     "ssh-keygen": "^0.2.1",
     "tsort": "0.0.1",
