--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "ejs": "~0.8.4",
     "fs.extra": "^1.2.1",
     "grunt": "^1.0.0",
-    "grunt-autoprefixer": "^0.7.3",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-coffee": "~0.10.1",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-copy": "~0.5.0",
+    "grunt-autoprefixer": "^3.0.0",
+    "grunt-contrib-clean": "~1.0.0",
+    "grunt-contrib-coffee": "~1.0.0",
+    "grunt-contrib-concat": "~1.0.1",
+    "grunt-contrib-copy": "~1.0.0",
     "grunt-contrib-cssmin": "~0.9.0",
     "grunt-contrib-jst": "~0.6.0",
     "grunt-contrib-less": "~1.3.0",
@@ -26,18 +26,18 @@
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
     "lodash": "^2.4.1",
+    "marked": "~0.3.2",
     "passport": "^0.2.0",
     "passport-local": "^1.0.0",
     "rc": "~0.3.3",
     "rimraf": "^2.2.8",
-    "sails": "~0.11.0",
-    "sails-disk": "0.10.10",
+    "sails": "^0.12.10",
+    "sails-disk": "~0.10.10",
     "sails-memory": "0.10.7",
     "sails-mysql": "^0.11.0",
     "shelljs": "^0.3.0",
     "ssh-keygen": "^0.2.1",
-    "tsort": "0.0.1",
-    "marked": "~0.3.2"
+    "tsort": "0.0.1"
   },
   "scripts": {
     "start": "node app.js",
