--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
     "lodash": "^2.4.1",
+    "lodash.assign": "^4.2.0",
     "marked": "~0.3.2",
     "passport": "^0.2.0",
     "passport-local": "^1.0.0",
@@ -83,6 +84,7 @@
     "supertest": "^0.13.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0",
     "webdriverjs": "^1.6.1"
   }
 }
