move port connector and mousetrap to typescript remove gulp-tsc, use gulp-typescript

--- a/package.json
+++ b/package.json
@@ -75,13 +75,13 @@
     "gulp-newer": "~0.3.0",
     "gulp-protractor": "0.0.7",
     "gulp-sourcemaps": "^2.2.0",
-    "gulp-tsc": "~0.7.0",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "~2.2.14",
     "mocha": "~1.18.2",
     "mousetrap": "^1.6.0",
     "run-sequence": "~0.3.6",
     "supertest": "^0.13.0",
+    "typescript": "^2.1.4",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0",
