--- a/package.json
+++ b/package.json
@@ -74,12 +74,15 @@
     "gulp-mocha": "~0.4.1",
     "gulp-newer": "~0.3.0",
     "gulp-protractor": "0.0.7",
+    "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.2.0",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "~2.2.14",
+    "jshint": "^2.9.4",
     "mocha": "~1.18.2",
     "mousetrap": "^1.6.0",
     "run-sequence": "~0.3.6",
+    "stringify": "^5.1.0",
     "supertest": "^0.13.0",
     "typescript": "^2.1.4",
     "vinyl-buffer": "^1.0.0",
