refactor Project controller to typescript improve communication between client and browser fix invalid url's on route add more feedback on communication

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "circular-json": "^0.3.1",
     "coverage-percentage": "0.0.2",
     "ejs": "~0.8.4",
+    "fs-extra": "^1.0.0",
     "fs.extra": "^1.2.1",
     "grunt": "^1.0.0",
     "grunt-autoprefixer": "^3.0.0",
@@ -60,9 +61,12 @@
     "@types/angular-ui-bootstrap": "^0.13.35",
     "@types/circular-json": "^0.1.30",
     "@types/express": "^4.0.34",
+    "@types/fs-extra": "0.0.35",
+    "@types/lodash": "^4.14.44",
     "@types/mousetrap": "^1.5.32",
     "@types/passport": "^0.2.34",
     "@types/socket.io-client": "^1.4.28",
+    "@types/underscore.string": "0.0.30",
     "angular": "^1.5.8",
     "angular-animate": "^1.5.8",
     "angular-ui-bootstrap": "^2.3.1",
