moved dropzone dependency from bower to npm updated dropzone dependency from from version 3.10 to 4.3

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/angular-animate": "^1.5.5",
     "@types/angular-ui-bootstrap": "^0.13.35",
     "@types/circular-json": "^0.1.30",
+    "@types/dropzone": "^4.3.34",
     "@types/express": "^4.0.34",
     "@types/fs-extra": "0.0.35",
     "@types/lodash": "^4.14.44",
@@ -76,6 +77,7 @@
     "chai": "^1.9.1",
     "chai-as-promised": "^4.1.1",
     "chai-properties": "^1.1.0",
+    "dropzone": "^4.3.0",
     "gulp": "~3.9.1",
     "gulp-istanbul": "^0.2.0",
     "gulp-jison": "~1.0.0",
