--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "gulp-protractor": "0.0.7",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.2.0",
+    "gulp-typescript": "^3.2.1",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "~2.2.14",
     "jshint": "^2.9.4",
